--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
         .welcome-banner {
             background: linear-gradient(135deg, #475470, #4a1e78);
+            background-image: ("backHome.jpg");
             color: #ffffff;
             padding: 15px 15px 23px 15px;
             margin-bottom: 25px;
@@ -978,5 +979,6 @@
         });
     </script>
 </body>
+
 
 </html>
