--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: 'Segoe UI', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('');
+            background-image: url('backHome.png');
             transition: all 0.3s ease;
             height: 100vh;
         }
@@ -56,7 +56,6 @@
 
         .welcome-banner {
             background: linear-gradient(135deg, #475470, #4a1e78);
-            background-image: ("backHome.jpg");
             color: #ffffff;
             padding: 15px 15px 23px 15px;
             margin-bottom: 25px;
