--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             padding: 0;
             background-image: url('backHome.png');
             transition: all 0.3s ease;
+            background-size: cover; 
             height: 100vh;
         }
 
@@ -58,6 +59,7 @@
             background: linear-gradient(135deg, #475470, #4a1e78);
             color: #ffffff;
             padding: 15px 15px 23px 15px;
+            background-image: ('backHome.png');
             margin-bottom: 25px;
             border-radius: 10px;
             box-shadow: 10px 8px 20px rgb(22, 22, 22);
@@ -978,6 +980,5 @@
         });
     </script>
 </body>
-
 
 </html>
